compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__numbers__numbers_with_scientific_notation.snap
---
source: compiler-core/src/erlang/tests/numbers.rs
expression: "\nconst i = 100.001e223\nconst j = -100.001e-223\n\npub fn main() {\n  i\n  j\n}\n"
---
----- SOURCE CODE

const i = 100.001e223
const j = -100.001e-223

pub fn main() {
  i
  j
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> float().
main() ->
    1000010000000000019665908316189043843159148085072442478256397069137698587541416634472224148782609298654584042789653362687508939311685541429242270213575609082572149767678550630459456078228265202777732814425639395211642188857344.0,
    -0.0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000100001.
