compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__numbers__numbers_with_underscores.snap
---
source: compiler-core/src/erlang/tests/numbers.rs
expression: "\npub fn main() {\n  100_000\n  100_000.00101\n}\n"
---
----- SOURCE CODE

pub fn main() {
  100_000
  100_000.00101
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> float().
main() ->
    100000,
    100000.00101.
