compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__numbers__zero_b_in_hex.snap
---
source: compiler-core/src/erlang/tests/numbers.rs
expression: "\npub fn main() {\n  0xffe0bb\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0xffe0bb
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    16769211.
